khd_projects/projects/static/projects/css/custom.css
@font-face
{
font-family: MyriadPro;
src: url(../fonts/MYRIADPRO-SEMIBOLD.OTF) format("opentype");
}

body {
    background-color: #384C6B;
    margin: 0px;
}

img {
    max-width:100%;
}

iframe {
    max-width:100%;
}

.profile-picture {
    max-width:100%;
    max-height:100%;
}

.container.border {
    background: white;
    padding-left: 40px;
    padding-right: 40px;
    padding-bottom: 20px;
    border-left: solid 10px #2F405A;
    border-right: solid 10px #2F405A;
}

.container.border.menu {
    padding:0px;
    padding-bottom: 20px;
    border-left: solid 10px #2F405A;
    border-right: solid 10px #2F405A;
}

.container.border.foot {
    padding-top: 20px;
    background: white;
    background-color: #24282B;
    color: white;
    border-left: solid 10px #2F405A;
    border-right: solid 10px #2F405A;
}

.jumbotron {
    background-color: white;
    padding: 20px;
}

.navbar {
    height: 50px;
    margin: 0px;
    border: none;
    border-radius: 0px;
}

.navbar-inverse {
    background-color: #24282B;
    background-image: none;
}

.panel_heading {
    padding: 5px;
    color: white;
    background-color: #24282B;
    border-bottom: 1px;
}

.panel.panel-default {
    border: none;
    background-color: white;
    border-radius: 0px;
    -webkit-box-shadow: 0 0px 0px rgba(0,0,0,.05);
    box-shadow: 0 0px 0px rgba(0,0,0,.05);
}

.project_panel {
    overflow: auto;
    background-color: #24282B;
    padding: 0px;
    margin: 0px;
    border: none;
    border-radius: 0px;
    list-style: none;
}

.project_panel ul {
	list-style: none;
    margin: 0px;
    padding: 0px;
}

.project_panel li {

    color: white;
    padding: 20px;
	float: left;
}


.project_item {
    overflow: auto;
    border-bottom: solid 1px black;
    padding: 5px;
}

.project_item h3 {
    font-family: MyriadPro;
    font-size: 20px;
    padding-bottom: 2px;
    padding-top: 2px;
    margin: 0px;
}

.project_item h3 a {
    padding-top: 5px;
    margin: 0px;
}

.project_item b {
    padding-right: 10px;
}

.project_atributes {
    font-size: 0.8em;
    color: gray;
}

#SubmittButton {
    margin-top: 20px;
}

.errorlist {
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1;
    padding: 15px;
    border-radius: 4px;
    list-style-type: none;
}

.btn-block {
    margin-top: 20px;
    margin-bottom: 20px;
}

.list-group {
    border-radius: 0px;
    -webkit-box-shadow: 0 0px 0px rgba(0,0,0,.075);
    box-shadow: 0 0px 0px rgba(0,0,0,.075);
}

